<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/lightGray"
    tools:context=".LoginFragment">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_app_logo"
        android:contentDescription="@string/app_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp" />

    <!-- Email Field -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:textColor="@color/darkTextColor"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:textColor="@color/darkTextColor"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/button_background"
        android:layout_marginBottom="16dp"/>

    <!-- Signup Link -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/signup_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? Sign up"
            android:textColor="@color/red"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
