<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".HomeFragment">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/paddy_leaf_disease_finder"
        android:textSize="24sp"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />

    <!-- CardView for Rounded Image Preview -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_image_preview"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_uploadimage"
            android:scaleType="fitCenter"
            android:contentDescription="Selected or Captured Image Preview" />
    </androidx.cardview.widget.CardView>

    <!-- Detection Result TextView -->
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/detection_result"
        android:textSize="20sp"
        android:textColor="@color/textPrimary"
        app:layout_constraintTop_toBottomOf="@id/card_image_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />

    <!-- Additional Details TextView -->
    <TextView
        android:id="@+id/additionaldetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/additional_details"
        android:textSize="16sp"
        android:textColor="@color/textSecondary"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />

    <!-- Layout for Buttons -->
    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/additionaldetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- ImageButton to Capture -->
        <ImageButton
            android:id="@+id/button_capture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_camera"
            android:contentDescription="@string/capture"
            app:tint="@color/bottom_nav_color"
            android:layout_marginEnd="40dp"/>

        <!-- ImageButton to upload -->
        <ImageButton
            android:id="@+id/button_upload"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_browse"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/detect_disease"
            app:tint="@color/bottom_nav_color" />
    </LinearLayout>

    <!-- Button to Detect Disease -->
    <Button
        android:id="@+id/fab_detect"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/detect"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        android:gravity="center"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btn_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
